test[RED]: add some new tests for report service